unpackaged/main/default/objects/Account/fields/Account_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Type__c</fullName>
    <description>Used for subtype - values depends on account type selected</description>
    <inlineHelpText>The values available in this picklist depend on the Account Type selected.</inlineHelpText>
    <label>Account Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Sub_Type</valueSetName>
    </valueSet>
</CustomField>