unpackaged/main/default/objects/Account/fields/Facebook_Followers__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Followers__c</fullName>
    <description>Space to store the number of facebook followers</description>
    <label>Facebook Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>