unpackaged/main/default/objects/Account/fields/Facebook_Page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page__c</fullName>
    <description>Space to store the url of the facebook page</description>
    <label>Facebook Page</label>
    <type>Url</type>
</CustomField>