unpackaged/main/default/objects/Account/fields/Instagram_Followers__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Followers__c</fullName>
    <description>Space to store the number of instagram followers</description>
    <label>Instagram Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>