unpackaged/main/default/objects/Account/fields/Instagram_Page__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Page__c</fullName>
    <description>Space to store a link to the instagram page</description>
    <label>Instagram Page</label>
    <type>Url</type>
</CustomField>