unpackaged/main/default/objects/Account/fields/Newsletter_Reach__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Reach__c</fullName>
    <description>Space to store the newsletter reach figures</description>
    <label>Newsletter Reach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>