unpackaged/main/default/objects/Account/fields/Operating_Countries__c.field-meta.xml
<CustomField>
    <fullName>Operating_Countries__c</fullName>
    <description>To select the countries this Account operates in</description>
    <label>Operating Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>