unpackaged/main/default/objects/Account/fields/Registered_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Name__c</fullName>
    <description>To store the registered company name, if different to the brand name.</description>
    <label>Registered Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>