unpackaged/main/default/objects/Account/fields/TikTik_Page__c.field-meta.xml
<CustomField>
    <fullName>TikTik_Page__c</fullName>
    <description>Space to store a link to the TikTok page</description>
    <label>TikTik Page</label>
    <type>Url</type>
</CustomField>