unpackaged/main/default/objects/Account/fields/TikTok_Followers__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Followers__c</fullName>
    <description>Space to store the number of TikTok followers</description>
    <label>TikTok Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>