unpackaged/main/default/objects/Account/fields/Website_Links__c.field-meta.xml
<CustomField>
    <fullName>Website_Links__c</fullName>
    <description>Space for users to provide multiple website links</description>
    <label>Website Links</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>