unpackaged/main/default/objects/Account/fields/Website_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Website_Traffic__c</fullName>
    <description>Estimated website traffic</description>
    <label>Website Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low - 1-20,000</fullName>
            </value>
            <value>
                <fullName>Medium - 20,001 - 100,000</fullName>
            </value>
            <value>
                <fullName>High - 100,000 - 1,000,000</fullName>
            </value>
            <value>
                <fullName>Very High - 1,000,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>