unpackaged/main/default/objects/Account/fields/YouTube_Followers__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Followers__c</fullName>
    <description>Space to store the number of youtube followers</description>
    <label>YouTube Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>