unpackaged/main/default/objects/Account/fields/YouTube_Page__c.field-meta.xml
<CustomField>
    <fullName>YouTube_Page__c</fullName>
    <description>Space for link to the youtube page</description>
    <label>YouTube Page</label>
    <type>Url</type>
</CustomField>